--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,13 @@ baseurl: /ngolahati.github.io # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Lorem Ipsum
-user_description: Anon Developer at Lorem Ipsum Dolor
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
-disqus_username: lorem_ipsum
+# username: Lorem Ipsum
+# user_description: Anon Developer at Lorem Ipsum Dolor
+# email: anon@anon.com
+# twitter_username: lorem_ipsum
+# github_username:  lorem_ipsum
+# gplus_username:  lorem_ipsum
+# disqus_username: lorem_ipsum
 
 # Build settings
 markdown: kramdown
