--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: nGoPi
 description: Ngolah Pikiran Lan Ati
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: "https://ngolahati.github.io" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 # username: Lorem Ipsum
